# hydro-sense-monitor

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
aws/: backend-deploymentconfig.json  backend-publicendpoint.json  frontend-deploymentconfig.json  frontend-publicendpoint.json  traefik-deploymentconfig.json  traefik-publicendpoint.json
backend/: .dockerignore  .example.env  .gitignore  pyproject.toml
backend/app/: exceptions.py  main.py  models.py  schemas.py
backend/app/api/: main.py
backend/app/api/routes/: sensor.py
backend/app/core/: config.py
backend/app/tests/: conftest.py  test_classification.py  test_health.py  test_schemas.py  test_sensor_api.py
docker/fastapi/: Dockerfile
docker/node/: Dockerfile  nginx.conf
docker/traefik/: Dockerfile  dynamic-local.yml  dynamic.yml  traefik.yml
frontend/: .dockerignore  .example.env  .gitignore  biome.jsonc  components.json  jest.config.js  jest.setup.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: app.css  root.tsx
frontend/app/common/components/: alert-fetcher.tsx  button.tsx  input.tsx  random-reading-generator.tsx  table.tsx  units-health-dashboard.tsx
frontend/app/common/pages/: welcome.tsx
frontend/app/lib/: api.ts
frontend/app/routes/: home.tsx
frontend/tests/: setup.test.ts  test-utils.tsx
frontend/tests/components/: alert-fetcher.test.tsx  button.test.tsx  random-reading-generator.test.tsx  units-health-dashboard.test.tsx
frontend/tests/routes/: home.test.tsx
